@@ -4,17 +4,17 @@ Hash: SHA256
 AUX mimicmod.confd 698 SHA256 16b3b34a493339ef6e7a9837565d1313cafeffb71c60111a91733f9ccdd84a88 SHA512 5dc8d2a6aca44d7f49f90cff3715fc7c71d69df9097a3ebf9d147e2f6a97fd194b93ecbfaa0518ac0b152d154b01d08e1e024bf69d0c7d2d66b1a89e96ee056f WHIRLPOOL c56ddacb4d5771606cf91c51b49e382a916ff9cd253159a6dd800b50befdd57c167ccd18d29b39ce109c05734b11c3795fb79803ac49f1c28f97ee2f6b4399cb
 AUX mimicmod.initd 798 SHA256 2056464756377e1e203953d79a64bef0d3859b666c41edc5735a199426072206 SHA512 c703417cba3f1ebaeaef80dc1186d76e20e7a6c0e97548d15a7b3e8375cb4e81cdc33b6546ce557754ec9735b96ab644a6ac2629f7259ae53ad5c6a07ac2a743 WHIRLPOOL 58c6d8eb3e833a11431b5eb12503183556f6a00a1c67f7d0f10c6555ac3098a2c544376b558de361facf611aff0e944cc8c4f710b34a31e426cc3f452e437dae
 AUX mimicmod.logrotate 111 SHA256 bfd3b216f89a20ddbfc1e8c38b0cbd85211b92611e14470f1bf955df530c2c28 SHA512 cfea1921518b71676b66ca0339bffb8ceaf7da680361a9489ee7cf25330eac0186a266a84734e79a33a05d587fa432e2fe573b12f59a68306830c28c35b83385 WHIRLPOOL 974ce1753a50cee6ccec6469c68c98f07bda64fee8fd3b70335cae2845b5351754d28a45e114221c81d9a0cba984b3ca38358d76b4f29dfa851af6a11d0119e4
-EBUILD mimicmod-9999.ebuild 1308 SHA256 d96dfd03c489fbd6c7c5882ff0f653a174dc7d0f93e314985dc49bfc05366af2 SHA512 4f644ef695c2ea3b0b72c0347b264a748d9ac0f810dabed789bd7b7ab895b27f54c934bbb7a92989a1f6f721582f2d04b66b77cfe0cf8bb4e8a76c8e3c924393 WHIRLPOOL 534c3d706e461e3bab0b53588e81b55a559c0ee6d1f79fc633216a05b0b2083d4c59889d641981417d8a5c9acfa34900602a4f3a6cb82daa0a6624eb762b6c5f
-MISC ChangeLog 552 SHA256 8d7f600afb99a50781330d5b34f6349d1ab121ad91fa97f68dac39bdc03bf4e6 SHA512 bb237b210bc7a9e048cd0cd7c08b120f06194435a09e44f83cc7030b40753669eb0bddeffb85c600e642d3063e4117b3665aa0a3be2b4be0b29b7285abd460a0 WHIRLPOOL 5c990115b5d8e0863c779ea645919c88aea2a495e802a7bee77387b60ca710a7f16dd8dda08254cb9017053c86a21f3b16d263aaab9fc6571c334590315d2033
+EBUILD mimicmod-9999.ebuild 1269 SHA256 d8fa008010003563addc62b690881a6fac60fa07531985b96fb723cd509420e9 SHA512 cc6b4688fb7854283555779a6b3315504a19dfa92aae4f65c447df5f1c4be1580e6a7c037e993f09430b872aed3b1780af82c584356d3cb7e5ad7c912054bf01 WHIRLPOOL 072fd21f5af6e06b2d1e0a65d9e2c57fb2c0fa7cd857d4303505470ada9fe7e040c2061bba02d0cab82f6c11104afd7530089f97b4c48c556b1d16388ac44dda
+MISC ChangeLog 655 SHA256 502f00ff7c0d5f33f30aff403d8da31d5db00662b2fba2929907dc77b93617d9 SHA512 565a6d7131a57e5e89bc9d34758639a8d20b4baa9a2b856e4fec5236a27e6ec174ec1ea8a06f544307fca5de0d41a9040de75055adf4f36b3051d4385c524d31 WHIRLPOOL 7184dd27fd85d176c4425cc40fba2678a522e893f693d9e45588eb1a1ce7bff1efe0efc1a5f94c0cb13b9e4f5adaaa8ed006e6bd37034862bed644a225bddfa6
 MISC metadata.xml 251 SHA256 d3cfc8be6be78d585444c874f1a50dd2cdf0fb65e8e4defdad65acf21b1b2ce0 SHA512 0a85fe888ea9f2bb94aff3540958a673b849e4f1806ffcb9310d7df7f5aa5b30267315918531792637820815d82814a3adda72e8c9ceab3e47defe0d10eb191f WHIRLPOOL 9ad134667455ee081b762d981393f63005eacb4288c10a1ebfc3dc0eb32d8da0819e707a7b7077300d71dc02e2f989c7c9f8bb25cd81544118ea309979fd8b46
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJURVmPAAoJEKXBodJLEo5Sst0IAND+CbRhLFqE8Oajj0yrXCxm
-jrsTmhPQdVjYRQG13W7HuVU4o0jtnf7pF+YPykQwK9bV+ke1KB7+R/3kF+Zm+L4H
-5LVez9anMAQ5VHAJAWg0AS/WgfQpvThocOfHu0LulUU98/Lg1ceO+O8VCcR0jqy+
-sx87noJmrN0terrvKiRVbr9u4ZJ8jqbNbm88u5juKKodEt6Vl1mxosSmxxUg+LHt
-qUzR7kp8GAHQYIeyzFT9BkNFE0ir81VVb3Diy6s6zWPft4+/vZczNuvSyI83LK1P
-aJwexOhG89H4Qz/jNPs8tPVr1B64/9kTr8IWPmAAiFT5a+0I1Lk0ccf07IHnxkU=
-=/EDh
+iQEcBAEBCAAGBQJUSUB8AAoJEKXBodJLEo5SpswH/0GmL0PiR++YiurM5sGA11d8
+GSWdLEG97M0fH3jd4BNhFHT1NBgbx1abtE6OwoPSvE/1GFafhBqFnd823xc71Ubr
+ZX8YAtT++R6xcwqpCzX6+HoBFJNUkHFzob47b4hvU9cRhXfteiU7Y2nKW26ipz5G
+YBpv7xACLvsQF6shl/rH0WOpK6EJVblprJJPGuoVcQJ95wkFONj5RWQxIbLA+TqX
+LeZ5MpVyJU7wUhTEIB35DIHM0mSnDxt52CuZKvY2hLhgWI4PjHSptsRPjUDbSgFw
+iS52sEQaCY+VYuAbjoqqrVOVAgU2k92Hg0RkDhFCUC+73QouIym6rHvdVKK3xAA=
+=8+Lr
 -----END PGP SIGNATURE-----
