@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Oct 2014; Francisco Blas Izquierdo Riera (klondike) mimicmod-9999.ebuild:
+  Fix URL and keywords
+
   20 Oct 2014; Francisco Blas Izquierdo Riera (klondike) mimicmod-9999.ebuild:
   Updating EAPI, fixing repoman complaints
 
